MPS-38672 ForkAs replaced w/ PlanContribution
I'd like to keep GP independent of a logic that include it into another plan.
I find GP with forkAs confusing in a scenario when it's the only GP for a model.
However, if there's separate PlanContribution (either next to the plan or as an independent node),
 I can use the plan as a primary plan or as a fork/branch description, depending on
 other GPs available for a model.